--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,19 @@
 									{% endfor %}
 									</ul>
 								</li>
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+									>Histórico de Guanajuato</a>
+									<ul class="dropdown-menu">
+									{% for item in site.hall_of_fame%}
+										<li> <a class="dropdown-item" 
+										href="{{ item.url | relative_url}}"  
+										rel="noopener noreferrer"
+										title="{{ item.title }}"
+										> {{ item.title }}</a></li>
+									{% endfor %}
+									</ul>
+								</li>
     {%- assign default_paths = site.pages | sort:"order" | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
       {%- for path in site.main-menu -%}
