Hasta pronto, OBM

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
 			<br/>
 			Joshua Sebastián González Torres
 			<br/>
-			Líder del Comité Organizador de la OBM Guanajuato.
-			<br/>
-			Correo: <a href="mailto:onmaps@cimat.mx" class="font-monospace">onmaps@cimat.mx</a>
+			<!-- Líder del Comité Organizador de la OBM Guanajuato.
+			<br/> -->
+			Correo: <a href="mailto:joshua.gonzalez@cimat.mx" class="font-monospace">joshua.gonzalez@cimat.mx</a>
 		</small>
 	</div>
 </footer>
