--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 				<nav class="navbar bg-primary border-bottom border-body navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
 					<div class="container-fluid">
 						<a class="navbar-brand" href="{{ '/' | relative_url }}" rel="noopener noreferrer">
-							<img src="{{ site.baseurl }}/assets/img/Logo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top/">
-							<span>Biblioteca Virtual OBM GTO</span>
+							<!-- <img src="{{ site.baseurl }}/assets/img/Logo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top/"> -->
+							<span>Biblioteca Virtual Olímpica</span>
 						</a>
 
 						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
