--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,7 +12,7 @@ layout: home
 				<div class="col">
 					<div class="card h-100 mb-3">
 						<a
-							href="{{site.baseurl}}assets/pdf/Material/{{item.file}}"
+							href="{{site.baseurl}}/assets/pdf/Material/{{item.file}}"
 							target="_blank"
 							title="{{ item.alttext }}"
 							rel="noopener noreferrer"
@@ -21,12 +21,12 @@ layout: home
 								height="150px"
 								style="object-fit: contain;"
 								class="card-img-top border-bottom bg-white"
-								src="{{site.baseurl}}assets/img/{{item.thumbnail}}"
+								src="{{site.baseurl}}/assets/img/{{item.thumbnail}}"
 								alt="{{ item.title }}">
 						</a>
 						<div class="card-body">
 							<a
-								href="{{site.baseurl}}assets/pdf/Material/{{item.file}}"
+								href="{{site.baseurl}}/assets/pdf/Material/{{item.file}}"
 								target="_blank"
 								title="{{ item.alttext }}"
 								class="card-link"
@@ -67,7 +67,7 @@ layout: home
 			<div class="col">
 				<div class="card h-100 mb-3">
 					<a
-						href="{{site.baseurl}}assets/pdf/Material/{{item.file}}"
+						href="{{site.baseurl}}/assets/pdf/Material/{{item.file}}"
 						target="_blank"
 						rel="noopener noreferrer"
 						title="{{item.alttext}}"
@@ -76,12 +76,12 @@ layout: home
 							height="150px"
 							style="object-fit: contain;"
 							class="card-img-top border-bottom bg-white"
-							src="{{site.baseurl}}assets/img/{{item.thumbnail}}"
+							src="{{site.baseurl}}/assets/img/{{item.thumbnail}}"
 							alt="{{ item.title }}">
 					</a>
 					<div class="card-body">
 						<a
-							href="{{site.baseurl}}assets/pdf/Material/{{item.file}}"
+							href="{{site.baseurl}}/assets/pdf/Material/{{item.file}}"
 							target="_blank"
 							title="{{ item.alttext }}"
 							class="card-link"
