Little text secrets

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 										<li> <a class="dropdown-item" 
 										href="{{ item.url | relative_url}}"  
 										rel="noopener noreferrer"
-										title="{{ item.title }}"
+										title="{{ item.altname }}"
 										> {{ item.title }}</a></li>
 									{% endfor %}
 									</ul>
@@ -34,7 +34,7 @@
 										<li> <a class="dropdown-item" 
 										href="{{ item.url | relative_url}}"  
 										rel="noopener noreferrer"
-										title="{{ item.title }}"
+										title="{{ item.altname }}"
 										> {{ item.title }}</a></li>
 									{% endfor %}
 									</ul>
@@ -47,7 +47,7 @@
 										<li> <a class="dropdown-item" 
 										href="{{ item.url | relative_url}}"  
 										rel="noopener noreferrer"
-										title="{{ item.title }}"
+										title="{{ item.altname }}"
 										> {{ item.title }}</a></li>
 									{% endfor %}
 									</ul>
