Minor info update
Nuevo correo para asuntos de la Biblioteca y actualización de la historia

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
 			<br/>
 			Joshua Sebastián González Torres
 			<br/>
-			<!-- Líder del Comité Organizador de la OBM Guanajuato.
+			<!-- El último delegado de la OBM Guanajuato de la larga línea.
 			<br/> -->
-			Correo: <a href="mailto:joshua.gonzalez@cimat.mx" class="font-monospace">joshua.gonzalez@cimat.mx</a>
+			Correo: <a href="mailto:{{site.email}}" class="font-monospace">{{site.email}}</a>
 		</small>
 	</div>
 </footer>
