Joshua también quiere conocerte

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,8 @@
 			<!-- El último delegado de la OBM Guanajuato de la larga línea.
 			<br/> -->
 			Correo: <a href="mailto:{{site.email}}" class="font-monospace">{{site.email}}</a>
+			<br/>
+			Más acerca de <a href="{{site.url}}">Joshua González</a>
 		</small>
 	</div>
 </footer>
