¿Quién es Joshua

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,7 +60,7 @@
 										<li> <a class="dropdown-item" 
 										href="{{ item.url | relative_url}}"  
 										rel="noopener noreferrer"
-										title="{{ item.title }}"
+										title="{{ item.altname }}"
 										> {{ item.title }}</a></li>
 									{% endfor %}
 									</ul>
