--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
     <div class="d-flex flex-column min-vh-100">
     {%- include header.html -%}
-
+	{%- include christmas.html -%}
     <main>
 
       {{ content }}
@@ -16,6 +16,7 @@
     {%- include footer.html -%}
 
     </div>
+	<script src="/BibliotecaVirtual/assets/christmas.js"></script>
   </body>
 
 </html>
