--- a/assets/style.css
+++ b/assets/style.css
@@ -217,3 +217,17 @@ a {
 .contact-card a {
 	color: #005c53;
 }
+
+.dropdown-menu .dropdown-submenu {
+display: none;
+position: absolute;
+left: 100%;
+top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+right: 100%;
+left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+display: block;
+}
